// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<p
  css={
    Array [
      Object {
        "map": undefined,
        "name": "nd9hyy",
        "next": undefined,
        "styles": "
    display: inline-block;
    color: #030D36;
    font-size: 1.125rem;
  ",
      },
      Object {
        "map": undefined,
        "name": "9oecbb",
        "next": undefined,
        "styles": "
    font-size: 16px;
  ",
      },
      undefined,
      undefined,
      undefined,
      false,
      false,
      false,
      false,
      false,
    ]
  }
>
  hello
</p>
`;

exports[`Header renders correctly with className 1`] = `
<p
  css={
    Array [
      Object {
        "map": undefined,
        "name": "nd9hyy",
        "next": undefined,
        "styles": "
    display: inline-block;
    color: #030D36;
    font-size: 1.125rem;
  ",
      },
      Object {
        "map": undefined,
        "name": "9oecbb",
        "next": undefined,
        "styles": "
    font-size: 16px;
  ",
      },
      "foo",
      undefined,
      undefined,
      false,
      false,
      false,
      false,
      false,
    ]
  }
>
  hello
</p>
`;
